--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,11 +8,13 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
+  
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "forceConsistentCasingInFileNames": true,
     "plugins": [
       {
         "name": "next"
@@ -22,6 +24,7 @@
       "@/*": ["./src/*"]
     }
   },
+  
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
